tests/fixtures/invalid/bool_rshift_str.py
# Cannot right shift Bool and Str
x: bool = True >> "hello"
